# PentaLedger

./: .gitignore  CMakeLists.txt  Kconfig  README.md  main.go
.github/workflows/: cmake-single-platform.yml
api/cmd/api/: company.go  helpers.go  main.go  routes.go
api/internal/data/: compay.go
api/scripts/: failures.sh
cmake/: FindSphinx.cmake  dependencies.cmake  documentation.cmake
cmd/web/: handlers.go  main.go  routes.go
configs/: test_defconfig
doc/design/: conf.py  index.rst  preface.rst
pentacore/: CMakeLists.txt
pentacore/include/: Configuration.hpp  PentaLedger.hpp
pentacore/include/accounting/: account_number.hpp  account_types.hpp  chart_of_accounts.hpp
pentacore/include/accounting/payroll/: FUTA.hpp  FilingStatus.hpp  OASDI.hpp  PayClassification.hpp  PayPeriods.hpp  W4.hpp  mn_witholding.hpp
pentacore/include/db/: file_header.hpp
pentacore/include/http/: response_codes.hpp
pentacore/include/time/: leap_year.hpp
pentacore/include/util/: ASCII_to_EBCDIC.hpp  EBCDIC_to_ASCII.hpp  Environment.hpp  case.hpp  trim.hpp
pentacore/src/: CMakeLists.txt  Configuration.cpp
pentacore/src/accounting/payroll/: MNIT_witholding.cpp  PayPeriods.cpp
pentacore/src/db/: file_header.cpp
pentacore/src/init/: init.cpp
pentacore/test/: CMakeLists.txt  Environment_test.cpp  OASDI_tst.cpp  PayPeriods_tst.cpp  account_number_test.cpp  case_test.cpp  leap_year_test.cpp  main_test.cpp  trim_test.cpp
pentaledger-ui/: package-lock.json  package.json
pentaserver/: CMakeLists.txt
pentaserver/src/: main.cpp
scripts/: ubuntu-deps.sh
templates/: Doxyfile.in  version.h.in
test/: CMakeLists.txt  example_test.cpp
ui/html/: base.tmpl
ui/html/pages/: home.tmpl
www-data/: index.html
